--- a/public/work.html
+++ b/public/work.html
@@ -69,7 +69,7 @@
     	<div class="container ">
     		<div class="row justify-content-center ftco-animate">
     			<div class="col-md-10 text-center">
-    				<h2 >I like to develope.</h2>
+    				<h2 >I like to develop.</h2>
     				<p >I'm currently the Technical Head of Anveshan'21 which is the annual fest of the Metallurgical department of IIT BHU. I have done couple of big projects on web developement and soft computing this semester. One of them is a bug tracker of industry standards which is made using MERN stack.
 						Another one is a ML/soft computing project in which a neuro-fuzzy hybrid model was made and trained to diagnose different medical conditions such as Diabetes. I have also made a google extension in past for finding lyrics of different songs. You can check all of them on my Git hub repo.
 					</p>
