--- a/public/work.html
+++ b/public/work.html
@@ -69,11 +69,94 @@
     	<div class="container ">
     		<div class="row justify-content-center ftco-animate">
     			<div class="col-md-10 text-center">
-    				<h2 >I like to develope.</h2>
-    				<p >I'm currently the Technical Head of Anveshan'21 which is the annual fest of the Metallurgical department of IIT BHU. I have done couple of big projects on web developement and soft computing this semester. One of them is a bug tracker of industry standards which is made using MERN stack.
-						Another one is a ML/soft computing project in which a neuro-fuzzy hybrid model was made and trained to diagnose different medical conditions such as Diabetes. I have also made a google extension in past for finding lyrics of different songs. You can check all of them on my Git hub repo.
+    				<h2 >I like to develop.</h2>
+    				<p >My interest in Web development started to grow in the first year of my college when I saw my seniors make websites for different college festivals. That's how I started my software/web development journey. I'm currently the Technical Head of Anveshan'21 which is the annual fest of the Metallurgical department of IIT BHU.
 					</p>
-					<h3 ><a href="https://github.com/Timus-sumit"><i class="fab fa-github fa-4x text-center"></i></a></h3>
+					<!-- <h3 ><a href="https://github.com/Timus-sumit"><i class="fab fa-github fa-4x text-center"></i></a></h3> -->
+    			</div>
+    		</div>
+    	</div>
+    </section>
+	<section class="ftco-section ftco-intro">
+    	<div class="container ">
+    		<div class="row justify-content-center ftco-animate">
+    			<div class="col-md-10 text-center">
+    				<h2 >Things I made this semester.</h2>
+					<p>PS, click on the titles to see the source code :)</p>
+    				<div class="row text-left ftco-animate">
+						<div class="col-md-12 my-5">
+							<h4><a href="https://github.com/Timus-sumit/Bug_tracker">Bug Tracker</a></h4>
+							<div class="row">
+								<div class="col-md-12">
+									<div class="card shadow my-5" >
+										<img src="images/bug1.png" class="card-img-top" >
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="card shadow my-5" >
+										<img src="images/bug2.png" class="card-img-top" >
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="card shadow my-5" >
+										<img src="images/bug3.png" class="card-img-top" >
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="card shadow my-5" >
+										<img src="images/bug4.png" class="card-img-top" >
+									</div>
+								</div>
+							</div>
+							<ul class="list-group list-group-flush ">
+								<li>A bug tracking system or defect tracking system is a software application that keeps track of reported software bugs in software development projects.</li>
+								<li>Technologies/Frameworks used: React, Node, Express, MongoDB, Firebase</li>
+								<li>This bug tracker is made for internal use in a company/organization.</li>
+								<li>Database records facts about known bug such as the time a it was reported, its severity/priority, and details on how to reproduce the bug; as well as the identity of the person who reported it and any programmers who may be working on fixing it.</li>
+							  </ul>
+						</div>
+					</div>
+					<div class="row text-left ftco-animate">
+						<div class="col-md-12 my-5">
+							<h4><a href="https://github.com/Timus-sumit/Neuro-fuzzy-hybrid-model-for-diabetes-prediction">Neuro Fuzzy Hybrid System for Diabetes Diagnosis</a></h4>
+							<ul class="list-group list-group-flush ">
+								<li>Neuro fuzzy system is based on fuzzy system which is trained on the basis of working of neural network theory.</li>	
+								<li>An Adaptive Neuro Fuzzy Inference System was made using Genetic Algorithm.</li>
+								<li>Languages/Libraries used: Python, Panda, NumPy, Scikit-learn</li>
+								<li>The Model was trained using the famous Pima Indian Diabetes Dataset.</li>
+								<li>An accuracy of 80% percent was achieved. A higher accuracy can be achieved by using a larger dataset.</li>
+							</ul>
+						</div>
+					</div>
+					<div class="row text-left ftco-animate">
+						<div class="col-md-12 my-5">
+							<h4><a href="https://github.com/Timus-sumit/Task-manager-api">Task Management API</a></h4>
+							<ul class="list-group list-group-flush ">
+								<li>Design of this Task Management is REST API based.</li>
+								<li>Technologies/Frameworks used : Node, MongoDB, Mongoose, Express</li>
+								<li>JWT Authentication is used for user login/signup.</li>
+								<li>It supports all CRUD operations along with searching and sorting.</li>
+							</ul>
+						</div>
+					</div>
+					<div class="row text-left ftco-animate">
+						<div class="col-md-12 my-5">
+							<h4><a href="https://github.com/Timus-sumit/LyricsFinder_chromeExtension">Lyrics Finder Chrome Extension</a></h4>
+							<div class="row">
+								<div class="col-md-12">
+									<div class="card shadow my-5" >
+										<img src="images/lyrics.png" class="card-img-top" >
+									</div>
+								</div>
+							</div>
+							<ul class="list-group list-group-flush ">
+								<li>I wanted to read lyrics of a song while looking at the music video, so I made a Chrome extension for it.</li>
+								<li>Language used: Javascript</li>
+								<li>Made using Shazam API and Genius API.</li>
+					
+							</ul>
+						</div>
+					</div>
     			</div>
     		</div>
     	</div>
