--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
     			</div>
     			<div class="col-md-4 py-md-5 pt-4 p-md-5">
     				<h2> Hello! I'm <span>Sumit</span></h2>
-    				<p>I'm a junior at IIT BHU. My interest lies in software/web developing. I try each day to become a better human and a developer.
+    				<p>I'm a senior at IIT BHU. My interest lies in software/web developing. I try each day to become a better human and a developer.
               My hobbies are producing music and making artworks. I'm also part of a small Navi Mumbai based music band called "Harfz"
               :)</p>
     				<br/>
